--- a/app/src/main/res/layout/activity_my_order_list.xml
+++ b/app/src/main/res/layout/activity_my_order_list.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <include
-        android:id="@+id/start"
+        android:id="@+id/title"
         layout="@layout/include_title"
         android:layout_width="match_parent"
         android:layout_height="38dp" />
@@ -15,7 +15,7 @@
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@id/start">
+        android:layout_below="@id/title">
 
         <TableRow
             android:layout_width="match_parent"
