--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <include
-        android:id="@+id/start"
+        android:id="@+id/title"
         layout="@layout/include_title"
         android:layout_width="match_parent"
         android:layout_height="40dp" />
@@ -17,7 +17,7 @@
         android:layout_above="@+id/bottom"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/start">
+        android:layout_below="@id/title">
 
     </android.support.v7.widget.RecyclerView>
 
